--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="2dp"
-    tools:context=".ui.OrderDetailActivity">
+    tools:context=".ui.activities.OrderDetailActivity">
 
 
     <RelativeLayout
